--- a/gtk-4.0/.config/gtk-4.0/settings.ini
+++ b/gtk-4.0/.config/gtk-4.0/settings.ini
@@ -1,8 +1,5 @@
-[Settings]
+[Settings]
 gtk-theme-name=MonoThemeDark
 gtk-icon-theme-name=Papirus-Dark
 gtk-font-name=Inter 12.5
-<<<<<<< HEAD
-=======
 gtk-monospaced-font-name=JetBrainsMono Nerd Font Mono 12.5
->>>>>>> af0de44b6 (Overhaul.)
