--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -1,45 +1,90 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-
     "modules": [
-        "break",
-        "title",
-        {
-            "type": "custom",
-            "format": "--------"
+	      {
+            "type": "title",
+            "keyWidth": 10
         },
-        "os",
-        "host",
-        "kernel",
-        "uptime",
-        "packages",
-        "shell",
+        "separator",
+        {
+            "type": "os",
+            "key": " ",
+            "keyColor": "34",  // = color4
+        },
+        {
+            "type": "kernel",
+            "key": " ",
+            "keyColor": "34",
+        },
+        {
+            "type": "packages",
+            "key": " ",
+            "keyColor": "34",  
+        },
+        {
+            "type": "shell",
+            "key": " ",
+            "keyColor": "34", 
+        },
+        {
+            "type": "terminal",
+            "key": " ",
+            "keyColor": "34", 
+        },
+        {
+            "type": "wm",
+            "key": " ",
+            "keyColor": "34", 
+        },
         {
             "type": "display",
-            "compactType": "original",
-            "key": "Resolution"
+            "key": " ",
+            "keyColor": "34"
         },
-        "de",
-        "wm",
-        "terminal",
-        "cpu",
-        "gpu",
-        "theme",
-        "icons",
-        "terminal",
-        "cpu",
+        {
+            "type": "cpu",
+            "format": "{1}",
+            "key": " ",
+            "keyColor": "34"
+        },
         {
             "type": "gpu",
-            "format": "{1} {2}"
+            "format": "{1} {2}",
+            "key": " ",
+            "keyColor": "34"
         },
-        "memory",
-        "disk",
+        {
+             "type": "memory",
+            "key": "﬙ ",
+            "keyColor": "34"
+        },
+        {
+             "type": "swap",
+            "key": "󰾴 ",
+            "keyColor": "34"
+        },
+        {
+            "type": "disk",
+            "key": " ",
+            "keyColor": "34"
+        },
+        {
+            "type": "uptime",
+            "key": " ",
+            "keyColor": "34", 
+        },
+        {
+            "type": "command",
+            "key": "󱦟 ",
+            "keyColor": "34",
+            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
+        },
         "break",
         {
-            "type": "colors",
-            "symbol": "circle"
+            "type": "custom",
+            "format": "\u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m "
         },
-        "break"
-    ],
+        "break",
+        "break",
+    ]
 }
-
