Overhauled, cleaner zshrc.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -39,7 +39,7 @@ windowrulev2 = opacity 0.8 0.8,class:^org.gnome.gThumb$
 windowrulev2 = noblur,opacity 1.0 1.0,class:^org.vinegarhq.Sober$
 windowrulev2 = opacity 0.8 0.8,class:^io.missioncenter.MissionCenter$
 windowrulev2 = opacity 0.8 0.8,class:^evince$
-windowrulev2 = opacity 0.8 0.8,class:^discord$
+windowrulev2 = opacity 0.8 0.8,class:^vesktop$
 windowrulev2 = opacity 0.8 0.8,class:^nemo$
 windowrulev2 = opacity 0.8 0.8,class:^org.gnome.FileRoller$
 windowrulev2 = opacity 0.8 0.8,class:^swaync$
@@ -83,7 +83,7 @@ device {
   name = beken-usb-gaming-mouse-2
   accel_profile = flat
 }
-
+ 
 # animations:enabled = false
 
 # Volume control
