--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -131,7 +131,7 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod SHIFT, S, exec, hyprshot -m region --clipboard-only
+bind = $mainMod SHIFT, S, exec, hyprshot -m region
 
 # Move focus (keybinds)
 bind = $mainMod, left, movefocus, l
