--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -33,6 +33,7 @@ decoration {
 }
 
 # Window rules
+windowrule = float, class:^org.twosheds.iwgtk$
 windowrulev2 = opacity 0.8 0.8,class:^mako$
 windowrulev2 = opacity 0.8 0.8,class:^org.gnome.Software$
 windowrulev2 = opacity 0.8 0.8,class:^org.gnome.gThumb$
