waybar and hyprland anim updates

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -29,7 +29,8 @@ exec-once = dunst
 
 # Window decorations
 decoration {
-    rounding = 8
+    rounding = 7
+    rounding_power = 2.0
 }
 
 # Window rules
@@ -86,7 +87,10 @@ device {
   accel_profile = flat
 }
  
-# animations:enabled = false
+animations:enabled = true
+animation = windows, 1, 4, default
+animation = fade, 1, 4, default
+animation = workspaces, 1, 4, default
 
 # Volume control
 bind=,XF86AudioMute,exec,wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
