--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ layerrule = blur,rofi
 layerrule = blur,mako
 
 # notifd
-exec-once = dunst
+exec-once = mako
 
 # Window decorations
 decoration {
