--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -126,6 +126,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 
 # Keybinds
+bind = ALT, F4, exec, rofi -show power-menu -modi power-menu:rofi-power-menu
 bind = ALT, Return, fullscreen
 bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod, W, togglefloating
