--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -86,21 +86,15 @@ device {
   name = beken-usb-gaming-mouse-2
   accel_profile = flat
 }
- 
-animations {
-    enabled = true
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+# Window animations
+animation = windows, 1, 5, default
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+# Workspace animations
+animation = workspaces, 1, 5, default
 
-    animation = windows, 1, 6, default
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 5, default
-}
+# Fade animations
+animation = fade, 1, 5, default
 
 # Volume control
 bind=,XF86AudioMute,exec,wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
