--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -30,7 +30,7 @@ layerrule = blur,rofi
 layerrule = blur,mako
 
 # notifd
-exec-once = mako
+exec-once = mako &
 
 # Window decorations
 decoration {
@@ -56,7 +56,7 @@ windowrulev2 = opacity 0.8 0.8,class:^swaync$
 exec = hyprctl setcursor Bibata-Modern-Classic 24
 
 # Wallpaper
-exec-once = hyprpaper
+exec-once = hyprpaper &
 
 # Set window gaps to 8 pixels
 general {
@@ -107,7 +107,7 @@ bind=,XF86AudioLowerVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind=,XF86AudioRaiseVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 
 # Autostart
-exec-once = waybar & swaync
+exec-once = waybar &
 
 # Monitor configuration
 monitor = eDP-1,1920x1080@144,auto,1.0
