New wallpapers (configurable via hyprpaper that is located at ../dotfiles/hyprpaper/.config/hypr/hyprpaper.conf

--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/dotfiles/mountains.jpg
-wallpaper = , ~/dotfiles/mountains.jpg
+preload = ~/dotfiles/grass.jpg
+wallpaper = , ~/dotfiles/grass.jpg
