--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | 
 
 # Layer rules
 layerrule = blur,rofi
-layerrule = blur,mako
+layerrule = blur, logout_dialog
 
 # notifd
 exec-once = mako &
@@ -135,11 +135,10 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 
 # Keybinds
-bind = ALT, F4, exec, rofi -show power-menu -modi power-menu:rofi-power-menu
+bind = ALT, F4, exec, wlogout
 bind = ALT, Return, fullscreen
 bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod, W, togglefloating
-bind = $mainMod SHIFT, E, exec, wlogout
 bindm = SUPER,mouse:272,movewindow
 bindm = SUPER,mouse:273,resizewindow
 bind = CTRL, Q, killactive,
@@ -148,11 +147,11 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod SHIFT, S, exec, hyprshot -m region
+bind = $mainMod SHIFT, S, exec, hyprshot -zm region
 
 # Move focus (keybinds)
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, j, movefocus, u
+bind = $mainMod, k, movefocus, d
 
