New alternative rofi configuration

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -62,7 +62,7 @@ exec-once = hyprpaper &
 general {
     gaps_in = 5
     gaps_out = 10
-    col.active_border = rgb(eeeeee)
+    col.active_border = rgb(dddddd) # rgb(dddddd) 45deg
     col.inactive_border = rgb(252525) 
     border_size = 2
 }
