rofi file management

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 # Default programs
 $mainMod = SUPER
 $terminal = kitty
-$fileManager = nemo
+$fileManager = rofi -disable-history -show file-browser-extended
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
@@ -152,6 +152,6 @@ bind = $mainMod SHIFT, S, exec, hyprshot -zm region
 # Move focus (keybinds)
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
-bind = $mainMod, j, movefocus, u
-bind = $mainMod, k, movefocus, d
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
