rofi file management

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,7 +16,8 @@ exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 # Default programs
 $mainMod = SUPER
 $terminal = kitty
-$fileManager = rofi -disable-history -show file-browser-extended
+$fileManager = nemo
+$fileManager-alt = rofi -disable-history -show file-browser-extended
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
@@ -145,6 +146,7 @@ bind = CTRL, Q, killactive,
 bind = CTRL ALT, T, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, B, exec, $browser
+bind = $mainMod SHIFT, E, exec, $fileManager-alt
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, hyprshot -zm region
