--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -142,7 +142,7 @@ bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod, W, togglefloating
 bindm = SUPER,mouse:272,movewindow
 bindm = SUPER,mouse:273,resizewindow
-bind = CTRL, Q, killactive,
+bind = $mainMod, Q, killactive,
 bind = CTRL ALT, T, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, B, exec, $browser
