--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -59,7 +59,8 @@
   },
   "pulseaudio": {
         "format": "{icon}",
-        "format-icons": ["", "", ""], 
+        "format-icons": ["󰝟", "󰕿", "󰖀", "󰕾"],
+        "format-muted": "󰝟",
         "on-click": "pavucontrol",
         "tooltip-format": "{volume}%"
   },
