Hyprlock configuration added.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -152,7 +152,7 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod SHIFT, E, exec, $fileManager-alt
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod SHIFT, Q, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, hyprshot -zm region
 
 # Move focus (keybinds)
