Hypridle configuration added.

--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -13,9 +13,8 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/dotfiles/mountains.jpg
+    path = ~/dotfiles/layered-grass.jpg
     blur_passes = 2
-    color = $base
 }
 
 # TIME
