new wallpapers directory (stow wallpapers)

--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/dotfiles/layered-grass.jpg
+    path = ~/.config/wallpaper/layered-grass.jpg
     blur_passes = 2
 }
 
