--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/dotfiles/grass.jpg
-wallpaper = , ~/dotfiles/grass.jpg
+preload = ~/.config/wallpaper/grass.jpg
+wallpaper = , ~/.config/wallpaper/grass.jpg
