new wallpapers directory

--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/wallpaper/grass.jpg
-wallpaper = , ~/.config/wallpaper/grass.jpg
+preload = ~/.config/hypr/wallpaper/grass.jpg
+wallpaper = , ~/.config/hypr/wallpaper/grass.jpg
