--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -27,8 +27,10 @@ exec-once = wl-paste --type image --watch cliphist store
 bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Layer rules
+layerrule = blur,notifications
+layerrule = ignorezero, notifications
 layerrule = blur,rofi
-layerrule = blur, logout_dialog
+layerrule = blur,logout_dialog
 
 # notifd
 exec-once = mako &
