--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -2,7 +2,7 @@ source = $HOME/.config/hypr/mocha.conf
 
 $accent = rgb(eeeeee)
 $accentAlpha = rgb(eeeeee)
-$font = JetBrainsMono Nerd Font
+$font = Inter
 
 # GENERAL
 general {
@@ -13,18 +13,18 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/.config/hypr/wallpaper/layered-grass.jpg
+    path = $XDG_CONFIG_HOME/hypr/wallpaper/cabin.png
     blur_passes = 2
 }
 
 # TIME
 label {
     monitor =
-    text = cmd[update:30000] echo "$(date +"%R")"
+    text = cmd[update:30000] echo "$(date +"%I:%M %p")"
     color = $text
     font_size = 80
     font_family = $font
-    position = -30, 0
+    position = -27, 0
     halign = right
     valign = top
 }
@@ -36,7 +36,7 @@ label {
     color = $text
     font_size = 25
     font_family = $font
-    position = -30, -150
+    position = -30, -125
     halign = right
     valign = top
 }
@@ -71,7 +71,7 @@ input-field {
     check_color = $accent
     fail_color = $red
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-    font_family = $font
+    font_family = JetBrainsMono Nerd Font
     capslock_color = $yellow
     position = 0, -35
     halign = center
