--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,21 +1,45 @@
+# Custom Kitty Theme with Enhanced Saturation
+
+# Background and Foreground
 background #1c1c1c
 foreground #eeeeee
+
+# Cursor
 cursor #eeeeee
+
+# Selection
 selection_background #666666
 selection_foreground #101010
+
+# Black and Bright Black
 color0 #1c1c1c
 color8 #5a5a5a
-color1 #b87c7c
-color9 #b85e48
-color2 #7c9c7c
-color10 #8ca874
+
+# Red and Bright Red
+color1 #d07f7f
+color9 #d07f7f
+
+# Green and Bright Green
+color2 #8c9c9c
+color10 #8c9c9c
+
+# Yellow and Bright Yellow
 color3 #bfa680
-color11 #d8b890
-color4 #7088a0
-color12 #88a0b8
+color11 #bfa680
+
+# Blue and Bright Blue
+color4 #708090
+color12 #708090
+
+# Magenta and Bright Magenta
 color5 #9e8a7a
-color13 #8a7764
+color13 #9e8a7a
+
+# Cyan and Bright Cyan
 color6 #9dbcd4
 color14 #9dbcd4
+
+# White and Bright White
 color7 #b8b4a8
 color15 #e0d8c8
+
