--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -36,8 +36,8 @@ color5 #9e8a7a
 color13 #9e8a7a
 
 # Cyan and Bright Cyan
-color6 #9dbcd4
-color14 #9dbcd4
+color6 #708090
+color14 #708090
 
 # White and Bright White
 color7 #b8b4a8
