kitty terminal (few changes)

--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,45 +1,51 @@
-# Custom Kitty Theme with Enhanced Saturation
+# vim:ft=kitty
 
-# Background and Foreground
-background #1c1c1c
-foreground #eeeeee
+## name: Adwaita dark
+## license: MIT
+## author: Emil Löfquist (https://github.com/ewal)
+## upstream: https://github.com/ewal/kitty-adwaita/blob/main/adwaita_dark.conf
+## blurb: Adwaita dark - based on https://github.com/Mofiqul/adwaita.nvim
 
-# Cursor
-cursor #eeeeee
+background                #1d1d1d
+foreground                #deddda
 
-# Selection
-selection_background #666666
-selection_foreground #101010
+selection_background      #303030
+selection_foreground      #c0bfbc
 
-# Black and Bright Black
-color0 #1c1c1c
-color8 #5a5a5a
+url_color                 #1a5fb4
 
-# Red and Bright Red
-color1 #d07f7f
-color9 #d07f7f
+wayland_titlebar_color    system
+macos_titlebar_color      system
 
-# Green and Bright Green
-color2 #8c9c9c
-color10 #8c9c9c
+cursor                    #deddda
+cursor_text_color         #1d1d1d
 
-# Yellow and Bright Yellow
-color3 #bfa680
-color11 #bfa680
+active_border_color       #4f4f4f
+inactive_border_color     #282828
+bell_border_color         #ed333b
+visual_bell_color         none
 
-# Blue and Bright Blue
-color4 #708090
-color12 #708090
+active_tab_background     #242424 
+active_tab_foreground     #fcfcfc
+inactive_tab_background   #303030
+inactive_tab_foreground   #b0afac
+tab_bar_background        none
+tab_bar_margin_color      none
 
-# Magenta and Bright Magenta
-color5 #9e8a7a
-color13 #9e8a7a
+color0                    #1d1d1d
+color1                    #ed333b
+color2                    #57e389
+color3                    #ff7800
+color4                    #62a0ea
+color5                    #9141ac
+color6                    #5bc8af
+color7                    #deddda
 
-# Cyan and Bright Cyan
-color6 #708090
-color14 #708090
-
-# White and Bright White
-color7 #b8b4a8
-color15 #e0d8c8
-
+color8                    #9a9996
+color9                    #f66151
+color10                   #8ff0a4
+color11                   #ffa348
+color12                   #99c1f1
+color13                   #dc8add
+color14                   #93ddc2
+color15                   #f6f5f4
