--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ $menu = rofi -disable-history -show drun
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Layer rules
 layerrule = blur,notifications
