New custom neovim colorscheme ig (with a hint of lackluster)

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -42,12 +42,12 @@ decoration {
 }
 
 # Window rules
+windowrule = noblur,class:^brave$
 windowrule = float, class:^org.twosheds.iwgtk$
 windowrulev2 = opacity 0.8 0.8,class:^mako$
 windowrulev2 = opacity 0.8 0.8,class:^org.gnome.Software$
 windowrulev2 = opacity 0.8 0.8,class:^org.gnome.gThumb$
 windowrulev2 = noblur,opacity 1.0 1.0,class:^org.vinegarhq.Sober$
-windowrulev2 = noblur,opacity 1.0 1.0,class:^Brave-browser$
 windowrulev2 = opacity 0.8 0.8,class:^io.missioncenter.MissionCenter$
 windowrulev2 = opacity 0.8 0.8,class:^evince$
 windowrulev2 = opacity 0.8 0.8,class:^vesktop$
