Kitty vim motions.

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,6 +2,18 @@ include current-theme.conf
 
 background_opacity 0.8
 
+# Map Ctrl+h to Left Arrow
+map ctrl+h send_text all \x1b[D
+
+# Map Ctrl+j to Down Arrow
+map ctrl+j send_text all \x1b[B
+
+# Map Ctrl+k to Up Arrow
+map ctrl+k send_text all \x1b[A
+
+# Map Ctrl+l to Right Arrow
+map ctrl+l send_text all \x1b[C
+
 # BEGIN_KITTY_FONTS
 font_size        12.5
 font_family      family="JetBrainsMono Nerd Font Mono"
