Satisfied with this Neovim configuration. Will be working on tmux now.

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -1,12 +1,32 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
+    <!-- Set JetBrainsMono Nerd Font Mono as the default monospace font -->
     <match target="pattern">
         <test name="family" qual="any">
             <string>monospace</string>
         </test>
         <edit name="family" mode="assign" binding="strong">
             <string>JetBrainsMono Nerd Font Mono</string>
+        </edit>
+    </match>
+
+    <!-- Set Apple Color Emoji as the preferred emoji font -->
+    <match target="pattern">
+        <test name="family" qual="any">
+            <string>sans-serif</string>
+        </test>
+        <edit name="family" mode="prepend">
+            <string>Apple Color Emoji</string>
+        </edit>
+    </match>
+
+    <match target="pattern">
+        <test name="family" qual="any">
+            <string>emoji</string>
+        </test>
+        <edit name="family" mode="prepend">
+            <string>Apple Color Emoji</string>
         </edit>
     </match>
 </fontconfig>
