Fixed inconsistent hyprland cursors.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -2,12 +2,22 @@
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = TERMINAL,kitty
-env = GTK_THEME,MonoThemeDark
-env = QT_QPA_PLATFORMTHEME,qt6ct
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_CONFIG_HOME,$HOME/.config
+
+# QT Theming
+env = QT_QPA_PLATFORMTHEME,qt6ct
+
+# GTK Theming
+env = GTK_THEME,MonoThemeDark
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+
+# Cursor theming
+env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Bibata-Modern-Classic
+env = XCURSOR_THEME,Bibata-Modern-Classic
+env = XCURSOR_SIZE, 24
 
 # Default programs
 $mainMod = SUPER
@@ -62,11 +72,6 @@ general {
     col.inactive_border = rgb(252525) 
     border_size = 2
 }
-
-env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,Bibata-Modern-Classic
-env = XCURSOR_THEME,Bibata-Modern-Classic
-env = XCURSOR_SIZE, 24
 
 device {
   name = beken-2.4g-wireless-device-1
