One last push before going to NixOS

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -27,6 +27,9 @@ $fileManager-alt = rofi -disable-history -show file-browser-extended
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
+# Applets
+exec-once = nm-applet
+
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
@@ -59,7 +62,6 @@ windowrulev2 = opacity 0.8 0.8,class:^evince$
 windowrulev2 = opacity 0.8 0.8,class:^vesktop$
 windowrulev2 = opacity 0.8 0.8,class:^nemo$
 windowrulev2 = opacity 0.8 0.8,class:^org.gnome.FileRoller$
-windowrulev2 = opacity 0.8 0.8,class:^swaync$
 
 # Wallpaper
 exec-once = hyprpaper &
