--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -1,89 +1,103 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "display": {
-	"separator": " ❯ "
+    "color":{
+        "keys": "238;238;238"
+    },
+        "separator": "❯ "
+    },
+
+    "logo": {
+        "source": "~/.config/fastfetch/logo.txt",
+	"color": {
+		"1": "238;238;238",
+		"2": "37;37;37"
+	}
     },
     "modules": [
-	      {
-            "type": "title",
-            "keyWidth": 10
-        },
-        "separator",
         {
-            "type": "os",
-            "key": " ",
-               // = color4
+            "type": "custom",
+            "format": "┌───────── Hardware Information ─────────┐"
         },
         {
-            "type": "kernel",
-            "key": "󰐢 ",
-        },
-        {
-            "type": "packages",
-            "key": " ",
-	    "format": "{1} packages installed"
-        },
-        {
-            "type": "shell",
-            "key": " ",
-        },
-        {
-            "type": "terminal",
-            "key": " ",
-        },
-        {
-            "type": "wm",
-            "key": " ",
-        },
-        {
-            "type": "theme",
-            "key": " ",
-        },
-        {
-            "type": "icons",
-            "key": " ",
+            "type": "host",
+            "key": "󰌢 ",
+            "format": "{1}"
         },
         {
             "type": "display",
             "format": "{1}x{2} @ {3}Hz",
-            "key": "󰍹 ",
+            "key": "󰍹 "
         },
         {
             "type": "cpu",
-            "key": "󰻠 ",
+            "key": "󰻠 "
         },
         {
             "type": "gpu",
             "format": "{1} {2}",
-            "key": "󱤓 ",
+            "key": "󱤓 "
         },
         {
-             "type": "memory",
-            "key": " ",
+            "type": "memory",
+            "key": " "
         },
         {
-             "type": "swap",
-            "key": "󰾴 ",
+            "type": "swap",
+            "key": "󰾴 "
         },
         {
             "type": "disk",
-            "key": " ",
+            "key": " "
+        },
+        {
+            "type": "custom",
+            "format": "├───────── Software Information ─────────┤"
+        },
+        {
+            "type": "os",
+            "key": " "
+        },
+        {
+            "type": "kernel",
+            "key": "󰐢 "
+        },
+        {
+            "type": "packages",
+            "key": " ",
+            "format": "{1} packages installed"
+        },
+        {
+            "type": "shell",
+            "key": " "
+        },
+        {
+            "type": "terminal",
+            "key": " "
+        },
+        {
+            "type": "wm",
+            "key": " "
         },
         {
             "type": "uptime",
-            "key": " ",
-
+            "key": " "
         },
         {
             "type": "command",
             "key": "󱦟 ",
             "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
         },
-        "break",
+        {
+            "type": "custom",
+            "format": "└────────────────────────────────────────┘"
+        },
         {
             "type": "colors",
-            "symbol": "circle"
+            "symbol": "circle",
+            "paddingLeft": 13
         },
-        "break",
+        "break"
     ]
 }
+
