--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -1,19 +1,20 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "display": {
-    "color":{
-        "keys": "238;238;238"
-    },
+        "color": {
+            "keys": "238;238;238"
+        },
         "separator": "❯ "
     },
 
     "logo": {
         "source": "~/.config/fastfetch/logo.txt",
-	"color": {
-		"1": "238;238;238",
-		"2": "37;37;37"
-	}
+        "color": {
+            "1": "238;238;238",
+            "2": "37;37;37"
+        }
     },
+
     "modules": [
         {
             "type": "custom",
@@ -27,7 +28,7 @@
         {
             "type": "display",
             "format": "{1}x{2} @ {3}Hz",
-            "key": "󰍹 "
+            "key": "󰹑 "
         },
         {
             "type": "cpu",
@@ -36,7 +37,7 @@
         {
             "type": "gpu",
             "format": "{1} {2}",
-            "key": "󱤓 "
+            "key": " "
         },
         {
             "type": "memory",
@@ -44,11 +45,11 @@
         },
         {
             "type": "swap",
-            "key": "󰾴 "
+            "key": "󰓡 "
         },
         {
             "type": "disk",
-            "key": " "
+            "key": "󰋊 "
         },
         {
             "type": "custom",
@@ -56,11 +57,11 @@
         },
         {
             "type": "os",
-            "key": " "
+            "key": " "
         },
         {
             "type": "kernel",
-            "key": "󰐢 "
+            "key": " "
         },
         {
             "type": "packages",
@@ -69,15 +70,19 @@
         },
         {
             "type": "shell",
-            "key": " "
+            "key": " "
         },
         {
             "type": "terminal",
             "key": " "
         },
         {
+            "type": "de",
+            "key": "󰙧 "
+        },
+        {
             "type": "wm",
-            "key": " "
+            "key": "󰨡 "
         },
         {
             "type": "uptime",
