--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
 # Applets
-exec-once = nm-applet
+exec-once = nm-applet --indicator
 
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store
@@ -66,7 +66,6 @@ windowrulev2 = opacity 0.8 0.8,class:^org.gnome.FileRoller$
 # Wallpaper
 exec-once = hyprpaper &
 
-# Set window gaps to 8 pixels
 general {
     gaps_in = 5
     gaps_out = 10
