Font changes and whatnot

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ exec-once = nm-applet --indicator
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPER, PERIOD, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Layer rules
 layerrule = blur,notifications
@@ -141,20 +141,21 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 
 # Keybinds
-bind = ALT, F4, exec, wlogout
+bind = CTRL ALT, DELETE, exec, wlogout
 bind = ALT, Return, fullscreen
 bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod, W, togglefloating
-bindm = SUPER,mouse:272,movewindow
-bindm = SUPER,mouse:273,resizewindow
+bindm = $mainMod,mouse:272,movewindow
+bindm = $mainMod,mouse:273,resizewindow
 bind = $mainMod, Q, killactive,
 bind = CTRL ALT, T, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, B, exec, $browser
-bind = $mainMod SHIFT, E, exec, $fileManager-alt
+bind = $mainMod SHIFT, E, exec, $fileManager
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, Q, exec, hyprlock
+bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod SHIFT, S, exec, hyprshot -zm region
+bind = $mainMod CTRL, C, exec, killall waybar || waybar
 
 # Move focus (keybinds)
 bind = $mainMod, h, movefocus, l
