--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -1,8 +1,6 @@
-source = $HOME/.config/hypr/mocha.conf
-
 $accent = rgb(eeeeee)
 $accentAlpha = rgb(eeeeee)
-$font = Inter
+$font = SF Pro 12.5
 
 # GENERAL
 general {
