--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -57,7 +57,7 @@
         },
         {
             "type": "os",
-            "key": " "
+            "key": " "
         },
         {
             "type": "kernel",
